ajustes para testar envio de pdf

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
+spring:
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
+
 data:
   redirectUri: http://localhost:8080/
   clientId: devLocal
