add logo bov.br in ass and server port config in .env

--- a/.env.exemple
+++ b/.env.exemple
@@ -3,3 +3,4 @@ CLIENT_ID=devLocal
 SECRET=younIrtyij3
 SERVIDOR_OAUTH=cas.staging.iti.br/oauth2.0
 ASSINATURA_API_URI=https://assinatura-api.staging.iti.br/externo/v2/
+SERVER_PORT=8080
