--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
 			<artifactId>sign</artifactId>
 			<version>7.2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>svg</artifactId>
+			<version>7.2.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
