add envs de img sources

--- a/.env.exemple
+++ b/.env.exemple
@@ -4,3 +4,5 @@ SECRET=younIrtyij3
 SERVIDOR_OAUTH=cas.staging.iti.br/oauth2.0
 ASSINATURA_API_URI=https://assinatura-api.staging.iti.br/externo/v2/
 SERVER_PORT=8080
+IMG_RUBRIC_SOURCE=./assets/rubrica.png
+IMG_QR_CODE_SOURCE=./assets/qrcode-HML.svg
