alter img & text

--- a/.env.exemple
+++ b/.env.exemple
@@ -6,3 +6,4 @@ ASSINATURA_API_URI=https://assinatura-api.staging.iti.br/externo/v2/
 SERVER_PORT=8080
 IMG_RUBRIC_SOURCE=./assets/rubrica.png
 IMG_QR_CODE_SOURCE=./assets/qrcode-HML.svg
+IMG_ESP_LOGO=./assets/ESPLogo.png
